# ICROS2025_Quadruped_Robot_Challenges

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo_world.launch.py
meshes/: fullmap_ground_wall.mtl
worlds/: QRC_map.world
