<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ICROS2025_QRC_Simulation_Map</name>
  <version>0.0.0</version>
  <description>The ICROS2025 QRC Simulation Map package</description>

  <maintainer email="y6hyuk@keti.re.kr">jhyuk</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}"/>
  </export>
</package>
